--- a/dashly-studio/src/components/MainPage.css
+++ b/dashly-studio/src/components/MainPage.css
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: column;
     padding-top: 120px;
-    height: 84vh;
+    min-height: 84vh;
     justify-content: center;
     align-items: center;
 }
