--- a/dashly-studio/src/components/Stages.css
+++ b/dashly-studio/src/components/Stages.css
@@ -1,7 +1,7 @@
 .stages-container {
     max-width: 1100px;
     padding: 4rem 2rem;
-    height: 80vh;
+    min-height: 80vh;
     margin: auto;
     font-family: "Sora", sans-serif;
 }
